@@ -1,5 +1,10 @@
 # $Id$
 
+2007-12-18	Dmitry E. Demidov
+
+	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
+	method addFirstPrefix.
+
 2007-12-11	Dmitry E. Demidov
 
 	* core/Form/Primitives/PrimitiveString.class.php: change
